nixos, neovim, sway

--- a/sway.conf
+++ b/sway.conf
@@ -68,6 +68,13 @@ for_window [app_id="" title=".* is sharing your screen."] floating enable
 for_window [title="wlay"] floating enable
 for_window [instance="^floating foot$"] floating enable
 
+# exec_always {
+#   gsettings set org.gnome.desktop.interface gtk-theme $gtk-theme
+#   gsettings set org.gnome.desktop.interface icon-theme $icon-theme
+#   gsettings set org.gnome.desktop.interface cursor-theme $cursor-theme
+#   gsettings set org.gnome.desktop.interface font-name $gui-font
+# }
+
 # sway launcher
 #for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border pixel 10
 for_window [app_id="^ulauncher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border none
@@ -130,9 +137,9 @@ set $config_path $HOME/.config/sway/
 set $term_float footclient --app-id=floating_shell --window-size-chars=128x36
 set $term_float_portrait footclient -a floating_shell_portrait
 
-bindsym $mod+Return exec footclient --app-id=floating_shell --window-size-chars=128x36
+bindsym $mod+Return exec foot
 #bindsym $mod+Shift+Return exec kitty
-bindsym $mod+Shift+Return exec $term_float
+bindsym $mod+Shift+Return exec foot --app-id=floating_shell --window-size-chars=128x36
 bindsym $mod+q kill
 #bindsym $mod+Space exec $menu
 bindsym $mod+Space exec fuzzel --background-color=111111EE --text=FFFFFFFF --border-color=00000000 --no-icons --selection-color=C8FC0CFF --selection-text=000000FF --match-color=00FF00FF --inner-pad=15 --vertical-pad=20 --letter-spacing=0.5 --line-height=20 --terminal=\"foot --app-id=floating_shell\"
