--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -23,9 +23,30 @@ set scrolloff 10
 # use enter for shell commands
 map <enter> shell
 
+# fzf
+# map f $vi $(fzf)
+cmd fzf_jump ${{
+    res="$(find . -maxdepth 2 | fzf --reverse --header='Jump to location' | sed 's/\\/\\\\/g;s/"/\\"/g')"
+    if [ -d "$res" ] ; then
+        cmd="cd"
+    elif [ -f "$res" ] ; then
+        cmd="select"
+    else
+        exit 0
+    fi
+    lf -remote "send $id $cmd \"$res\""
+}}
+map <c-f> :fzf_jump
+
+# cmd paste $cp-p --lf-paste $id
+
 # execute current file (must be executable)
 map x $$f
 map X !$f
+
+map ~ cd ~
+map <c-d> trash
+map U !du -csh *
 
 # dedicated keys for file opener actions
 map o &mimeopen $f
@@ -44,8 +65,8 @@ cmd open ${{
 }}
 
 # define a custom 'rename' command without prompt for overwrite
-# cmd rename %[ -e $1 ] && printf "file exists" || mv $f $1
-# map r push :rename<space>
+cmd rename %[ -e $1 ] && printf "file exists" || mv $f $1
+map <c-r> push :rename<space>
 
 # make sure trash folder exists
 # %mkdir -p ~/.trash
