--- a/sway.conf
+++ b/sway.conf
@@ -139,6 +139,7 @@ set $term_float_portrait footclient -a floating_shell_portrait
 bindsym $mod+Return exec foot
 #bindsym $mod+Shift+Return exec kitty
 bindsym $mod+Shift+Return exec foot --app-id=floating_shell --window-size-chars=128x36
+bindsym $mod+Shift+F exec foot --app-id=floating_shell --window-size-chars=128x36 lf
 bindsym $mod+q kill
 #bindsym $mod+Space exec $menu
 bindsym $mod+Space exec fuzzel --background-color=111111EE --text=FFFFFFFF --border-color=00000000 --no-icons --selection-color=C8FC0CFF --selection-text=000000FF --match-color=00FF00FF --inner-pad=15 --vertical-pad=20 --letter-spacing=0.5 --line-height=20 --terminal=\"foot --app-id=floating_shell\"
