--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -23,6 +23,9 @@ set scrolloff 10
 # use enter for shell commands
 map <enter> shell
 
+# show hidden
+map . set hidden!
+
 # fzf
 # map f $vi $(fzf)
 cmd fzf_jump ${{
@@ -47,6 +50,10 @@ map X !$f
 map ~ cd ~
 map <c-d> trash
 map U !du -csh *
+
+map <c-x> cut
+map <c-c> copy
+map <c-v> paste
 
 # dedicated keys for file opener actions
 map o &mimeopen $f
