--- a/sway.conf
+++ b/sway.conf
@@ -280,8 +280,44 @@ bindsym $mod+Shift+space floating toggle
 ## Navigation // Swap focus to the parent window ##
 bindsym $mod+a focus parent
 
-## Launch // Toggle Help ##
-bindsym $mod+question exec $help
-
 default_border pixel 4
 hide_edge_borders smart
+
+# reboot mode
+set $mode_shutdown "\
+<span foreground='$white'></span>  \
+<span foreground='$white'> \
+<span foreground='$white'>(<b>h</b>)</span> hibernate \
+<span foreground='$white'>(<b>l</b>)</span> lock \
+<span foreground='$white'>(<b>e</b>)</span> logout \
+<span foreground='$white'>(<b>r</b>)</span> reboot \
+<span foreground='$white'>(<b>u</b>)</span> suspend \
+<span foreground='$white'>(<b>s</b>)</span> shutdown \
+</span>"
+mode --pango_markup $mode_shutdown {
+    #bindsym l mode "default", exec $locking # lock
+    bindsym e exec loginctl terminate-user $USER # logout
+    bindsym u mode "default", exec systemctl suspend # suspend
+    bindsym h mode "default", exec systemctl hibernate # hibernate
+    bindsym s exec systemctl poweroff # shutdown
+    bindsym r exec systemctl reboot # reboot
+    bindsym --to-code Escape mode "default" # Return to default mode.
+}
+## Launch // Exit Menu ##
+bindsym $mod+Shift+e mode $mode_shutdown
+
+# recording mode
+set $mode_recording "<span foreground='$red'></span>  \
+<span foreground='$red'><b>Record</b></span> <span foreground='$red'>(<b>r</b>)</span> \
+<span foreground='$red'>+ [<span foreground='$red'><b>Shift</b></span> for ]</span>"
+set $recorder /home/nom/.config/sway/scripts/recorder.sh
+mode --pango_markup $mode_recording {
+        bindsym r exec $recorder, mode "default"
+        bindsym Shift+r exec $recorder -a, mode "default"
+        # Return to default mode.
+        bindsym Escape mode "default"
+}
+## Launch // Recording Mode ##
+bindsym $mod+Shift+r mode $mode_recording
+## Launch // Stop Recording Mode ##
+bindsym $mod+Escape exec killall -s SIGINT wf-recorder
