--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -67,6 +67,8 @@ cmd open ${{
     test -L $f && f=$(readlink -f $f)
     case $(file --mime-type $f -b) in
         text/*) $EDITOR $fx;;
+        video/*) mpv $fx;;
+        image/*) mpv $fx --pause;;
         *) for f in $fx; do setsid $OPENER $f > /dev/null 2> /dev/null & done;;
     esac
 }}
