--- a/xdg-applications/notes.desktop
+++ b/xdg-applications/notes.desktop
@@ -4,6 +4,7 @@ Name=notes
 Comment=Notes in neovim
 Icon=utilities-terminal
 Terminal=true
-Exec=nvim /mnt/data/notes
+Exec=nvim /mnt/data/notes/today.md
+Path=/mnt/data/notes
 Categories=ConsoleOnly;System;FileTools;FileManager
 MimeType=inode/directory;
