--- a/xdg-applications/config.desktop
+++ b/xdg-applications/config.desktop
@@ -5,5 +5,6 @@ Comment=Edit system config in neovim
 Icon=utilities-terminal
 Terminal=true
 Exec=nvim /mnt/data/config
+Path=/mnt/data/config
 Categories=ConsoleOnly;System;FileTools;FileManager
 MimeType=inode/directory;
