--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -146,6 +146,9 @@ button-close-color=FFFFFF
 # cancel=Control+g Control+d Escape
 # toggle-url-visible=t
 
+[text-bindings]
+#\x03=Mod4+c  # Map Super+c -> Ctrl+c
+
 [mouse-bindings]
 # primary-paste=BTN_MIDDLE
 # select-begin=BTN_LEFT
