--- a/sway.conf
+++ b/sway.conf
@@ -125,6 +125,7 @@ input type:mouse {
 # outputs
 #output * bg $HOME/.wallpaper.png fill
 output * bg #111111 solid_color
+# output * scale 2.0
 
 # keymaps
 
