--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -28,18 +28,27 @@ map . set hidden!
 
 # fzf
 # map f $vi $(fzf)
-cmd fzf_jump ${{
-    res="$(find . -maxdepth 2 | fzf --reverse --header='Jump to location' | sed 's/\\/\\\\/g;s/"/\\"/g')"
-    if [ -d "$res" ] ; then
-        cmd="cd"
-    elif [ -f "$res" ] ; then
-        cmd="select"
-    else
-        exit 0
-    fi
-    lf -remote "send $id $cmd \"$res\""
+# cmd fzf_jump ${{
+#     res="$( cat ~/.fzf-marks | sed 's/.*:\(.*\)$/\1/;' | fzf --reverse --header='Jump to location' | sed 's/\\/\\\\/g;s/"/\\"/g')"
+#     if [ -d "$res" ] ; then
+#         cmd="cd"
+#     elif [ -f "$res" ] ; then
+#         cmd="select"
+#     else
+#         exit 0
+#     fi
+#     lf -remote "send $id $cmd \"$res\""
+# }}
+# map <c-f> :fzf_jump
+
+cmd fzm ${{
+    res="$( cat ~/.fzf-marks | sed 's/.*: \(.*\)$/\1/;' | fzf --reverse --header='Jump to location' | sed 's/\\/\\\\/g;s/"/\\"/g')"
+    lf -remote "send $id cd \"$res\""
 }}
-map <c-f> :fzf_jump
+map <c-o> :fzm
+
+cmd aj %lf -remote "send $id cd '$(fzm $1)'"
+map a push :aj<space>
 
 # cmd paste $cp-p --lf-paste $id
 
