--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -41,6 +41,11 @@ map . set hidden!
 # }}
 # map <c-f> :fzf_jump
 
+map <c-p> :quit
+
+map } :bottom
+map { :top
+
 cmd fzm ${{
     res="$( cat ~/.fzf-marks | sed 's/.*: \(.*\)$/\1/;' | fzf --reverse --header='Jump to location' | sed 's/\\/\\\\/g;s/"/\\"/g')"
     lf -remote "send $id cd \"$res\""
