--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-#: Fonts {{{
+#: Fonts \{\{{
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
@@ -24,7 +24,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12
+font_size 14
 
 #: Font size (in pts)
 
@@ -167,7 +167,7 @@ font_size 12
 
 #: }}}
 
-#: Cursor customization {{{
+#: Cursor customization \{\{{
 
 # cursor #cccccc
 
@@ -219,7 +219,7 @@ font_size 12
 
 #: }}}
 
-#: Scrollback {{{
+#: Scrollback \{\{{
 
 # scrollback_lines 2000
 
@@ -277,7 +277,7 @@ font_size 12
 
 #: }}}
 
-#: Mouse {{{
+#: Mouse \{\{{
 
 mouse_hide_wait 2
 
@@ -371,7 +371,7 @@ mouse_hide_wait 2
 #: The default shape of the mouse pointer when dragging across text.
 #: Valid values are: arrow, beam and hand
 
-#: Mouse actions {{{
+#: Mouse actions \{\{{
 
 #: Mouse buttons can be remapped to perform arbitrary actions. The
 #: syntax for doing so is:
@@ -525,7 +525,7 @@ mouse_hide_wait 2
 
 #: }}}
 
-#: Performance tuning {{{
+#: Performance tuning \{\{{
 
 # repaint_delay 10
 
@@ -556,7 +556,7 @@ mouse_hide_wait 2
 
 #: }}}
 
-#: Terminal bell {{{
+#: Terminal bell \{\{{
 
 # enable_audio_bell yes
 
@@ -600,7 +600,7 @@ mouse_hide_wait 2
 
 #: }}}
 
-#: Window layout {{{
+#: Window layout \{\{{
 
 # remember_window_size  yes
 # initial_window_width  640
@@ -696,7 +696,7 @@ window_padding_width 5
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations no
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -775,7 +775,7 @@ confirm_os_window_close 0
 
 #: }}}
 
-#: Tab bar {{{
+#: Tab bar \{\{{
 
 # tab_bar_edge bottom
 
@@ -792,7 +792,7 @@ confirm_os_window_close 0
 #: the second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+tab_bar_style separator
 
 #: The tab bar style, can be one of:
 
@@ -818,7 +818,7 @@ confirm_os_window_close 0
 #:     action which presents you with a list of tabs and allows for easy
 #:     switching to a tab.
 
-# tab_bar_align left
+tab_bar_align center
 
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, or right.
@@ -836,7 +836,7 @@ confirm_os_window_close 0
 #: closed tab. A value of right will switch to the tab to the right of
 #: the closed tab. A value of last will switch to the right-most tab.
 
-# tab_fade 0.25 0.5 0.75 1
+# tab_fade 0.0 0.0 0.0 0.0
 
 #: Control how each tab fades into the background when using fade for
 #: the tab_bar_style. Each number is an alpha (between zero and one)
@@ -845,12 +845,12 @@ confirm_os_window_close 0
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-# tab_separator " ┇"
+tab_separator " "
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_powerline_style angled
+# tab_powerline_style slanted
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
@@ -862,7 +862,7 @@ confirm_os_window_close 0
 #: tab that does not have focus has some activity. If you want to use
 #: leading or trailing spaces surround the text with quotes.
 
-# tab_title_template "{title}"
+tab_title_template " {title} "
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -885,12 +885,12 @@ confirm_os_window_close 0
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
 
-# active_tab_foreground   #000
-# active_tab_background   #eee
-# active_tab_font_style   bold-italic
-# inactive_tab_foreground #444
-# inactive_tab_background #999
-# inactive_tab_font_style normal
+active_tab_foreground   #0FF
+active_tab_background   #000
+active_tab_font_style   bold
+inactive_tab_foreground #AAA
+inactive_tab_background #000
+inactive_tab_font_style normal
 
 #: Tab bar colors and styles
 
@@ -906,7 +906,7 @@ confirm_os_window_close 0
 
 #: }}}
 
-#: Color scheme {{{
+#: Color scheme \{\{{
 
 # foreground #dddddd
 # background #000000
@@ -980,7 +980,7 @@ background_opacity 0.85
 #: to be used unchanged. Note that these colors can be overridden by
 #: the program running in the terminal.
 
-#: The color table {{{
+#: The color table \{\{{
 
 #: The 256 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version, for the first 16 colors. You can set the
@@ -1054,7 +1054,7 @@ background_opacity 0.85
 
 #: }}}
 
-#: Advanced {{{
+#: Advanced \{\\{\{
 
 # shell .
 
@@ -1234,7 +1234,7 @@ background_opacity 0.85
 
 #: }}}
 
-#: OS specific tweaks {{{
+#: OS specific tweaks \{\{{
 
 # wayland_titlebar_color system
 
@@ -1244,7 +1244,7 @@ background_opacity 0.85
 #: means to use the background color of the currently active window
 #: and finally you can use an arbitrary color, such as #12af59 or red.
 
-# macos_titlebar_color system
+# macos_titlebar_color background
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, light or dark can
@@ -1291,7 +1291,7 @@ background_opacity 0.85
 #: 0.75 will result in rendering that looks similar to sub-pixel
 #: antialiasing at common font sizes.
 
-# macos_traditional_fullscreen no
+macos_traditional_fullscreen yes
 
 #: Use the traditional full-screen transition, that is faster, but
 #: less pretty.
@@ -1321,7 +1321,7 @@ background_opacity 0.85
 
 #: }}}
 
-#: Keyboard shortcuts {{{
+#: Keyboard shortcuts \{\{{
 
 #: Keys are identified simply by their lowercase unicode characters.
 #: For example: ``a`` for the A key, ``[`` for the left square bracket
@@ -1427,7 +1427,7 @@ background_opacity 0.85
 #: cause all invocations of the hints kitten to have the --hints-
 #: offset=0 option applied.
 
-#: Clipboard {{{
+#: Clipboard \{\{{
 
 #: Copy to clipboard
 
@@ -1467,7 +1467,7 @@ background_opacity 0.85
 
 #: }}}
 
-#: Scrolling {{{
+#: Scrolling \{\{{
 
 #: Scroll line up
 
@@ -1558,7 +1558,7 @@ background_opacity 0.85
 
 #: }}}
 
-#: Window management {{{
+#: Window management \{\{{
 
 #: New window
 
@@ -1688,7 +1688,7 @@ background_opacity 0.85
 
 #: }}}
 
-#: Tab management {{{
+#: Tab management \{\{{
 
 #: Next tab
 
@@ -1728,6 +1728,7 @@ background_opacity 0.85
 
 # map kitty_mod+alt+t set_tab_title
 # map shift+cmd+i     set_tab_title
+map super+r set_tab_title
 
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
@@ -1745,7 +1746,7 @@ background_opacity 0.85
 #:     map ctrl+t new_tab !neighbor [optional cmd to run]
 #: }}}
 
-#: Layout management {{{
+#: Layout management \{\{{
 
 #: Next layout
 
@@ -1769,7 +1770,7 @@ background_opacity 0.85
 #:     map ctrl+alt+z toggle_layout stack
 #: }}}
 
-#: Font sizes {{{
+#: Font sizes \{\{{
 
 #: You can change the font size for all top-level kitty OS windows at
 #: a time or only the current one.
@@ -1806,7 +1807,7 @@ background_opacity 0.85
 #:     map kitty_mod+f6 change_font_size current 10.0
 #: }}}
 
-#: Select and act on visible text {{{
+#: Select and act on visible text \{\{{
 
 #: Use the hints kitten to select text and either pass it to an
 #: external program or insert it into the terminal or copy it to the
@@ -1873,11 +1874,11 @@ background_opacity 0.85
 #: to different shortcuts. For a full description see kittens/hints.
 #: }}}
 
-#: Miscellaneous {{{
+#: Miscellaneous \{\{{
 
 #: Toggle fullscreen
 
-# map kitty_mod+f11 toggle_fullscreen
+map super+f toggle_fullscreen
 
 #: Toggle maximized
 
