--- a/kitty.conf
+++ b/kitty.conf
@@ -696,7 +696,7 @@ window_padding_width 5
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations yes
+hide_window_decorations no
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -894,7 +894,7 @@ inactive_tab_font_style normal
 
 #: Tab bar colors and styles
 
-# tab_bar_background none
+tab_bar_background #000
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -909,11 +909,11 @@ inactive_tab_font_style normal
 #: Color scheme \{\{{
 
 # foreground #dddddd
-# background #000000
+background #021627
 
 #: The foreground and background colors
 
-background_opacity 0.85
+#background_opacity 0.85
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -1244,7 +1244,7 @@ background_opacity 0.85
 #: means to use the background color of the currently active window
 #: and finally you can use an arbitrary color, such as #12af59 or red.
 
-# macos_titlebar_color background
+macos_titlebar_color background
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, light or dark can
@@ -1728,7 +1728,7 @@ macos_traditional_fullscreen yes
 
 # map kitty_mod+alt+t set_tab_title
 # map shift+cmd+i     set_tab_title
-map super+r set_tab_title
+map cmd+r set_tab_title
 
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
