--- a/kitty.conf
+++ b/kitty.conf
@@ -629,7 +629,7 @@ mouse_hide_wait 2
 #: (start_resizing_window). The cells value is used for horizontal
 #: resizing and the lines value for vertical resizing.
 
-# window_border_width 0.5pt
+#window_border_width 0.0pt
 
 #: The width of window borders. Can be either in pixels (px) or pts
 #: (pt). Values in pts will be rounded to the nearest number of pixels
@@ -637,7 +637,7 @@ mouse_hide_wait 2
 #: be pts. Note that borders are displayed only when more than one
 #: window is visible. They are meant to separate multiple windows.
 
-# draw_minimal_borders yes
+#draw_minimal_borders yes
 
 #: Draw only the minimum borders needed. This means that only the
 #: minimum needed borders for inactive windows are drawn. That is only
@@ -661,7 +661,7 @@ mouse_hide_wait 2
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 5
+window_padding_width 10
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -677,7 +677,7 @@ window_padding_width 5
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
 
-# active_border_color #00ff00
+active_border_color #00ff00
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
@@ -785,7 +785,7 @@ confirm_os_window_close 0
 
 #: The margin to the left and right of the tab bar (in pts)
 
-# tab_bar_margin_height 0.0 0.0
+tab_bar_margin_height 1.0 1.0
 
 #: The margin above and below the tab bar (in pts). The first number
 #: is the margin between the edge of the OS Window and the tab bar and
