--- a/zshrc.conf
+++ b/zshrc.conf
@@ -8,7 +8,7 @@ alias gs="git status"
 alias unzip 'atool --extract --explain $1'
 
 # note: never put nvim in quotes... will print ctrl characters
-export EDITOR=nvim
+#export EDITOR=nvim
 export TERM="xterm-256color"
 
 # foundry
