mac:alacritty,kitty,neovim

--- a/kitty.conf
+++ b/kitty.conf
@@ -165,11 +165,9 @@ font_size 14
 #: monitor DPI to arrive at a pixel value. There must be four values
 #: corresponding to thin, normal, thick, and very thick lines.
 
-#: }}}
+#: Cursor customization
 
-#: Cursor customization \{\{{
-
-# cursor #cccccc
+# cursor #F0F
 
 #: Default cursor color. If set to the special value none the cursor
 #: will be rendered with a "reverse video" effect. It's color will be
@@ -205,7 +203,7 @@ font_size 14
 
 #: Defines the thickness of the underline cursor (in pts)
 
-# cursor_blink_interval -1
+cursor_blink_interval 1
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
 #: to disable blinking. Negative values mean use system default. Note
@@ -305,7 +303,7 @@ mouse_hide_wait 2
 #: The set of URL prefixes to look for when detecting a URL under the
 #: mouse cursor.
 
-# detect_urls yes
+detect_urls yes
 
 #: Detect URLs under the mouse. Detected URLs are highlighted with an
 #: underline and the mouse cursor becomes a hand over them. Even if
@@ -317,7 +315,7 @@ mouse_hide_wait 2
 #: URLs under the mouse cursor. By default, all characters legal in
 #: URLs are allowed.
 
-# copy_on_select no
+# copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, simply selecting text with the mouse will cause the text
