--- a/zshrc.conf
+++ b/zshrc.conf
@@ -6,6 +6,7 @@ bindkey ${FZF_MARKS_JUMP:-'^o'} fzm
 alias lg="lazygit"
 alias gs="git status"
 alias unzip 'atool --extract --explain $1'
+alias wiki='nvim "+colorscheme darkplus" ~/wiki/index.md'
 
 # note: never put nvim in quotes... will print ctrl characters
 #export EDITOR=nvim
