--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -24,8 +24,8 @@ window:
     # Units are physical pixels; this is not DPI aware.
     # (change requires restart)
     padding:
-        x: 20
-        y: 20
+        x: 24
+        y: 32
 
     # Window decorations
     # Available values:
@@ -58,7 +58,7 @@ scrolling:
 # Some applications, like Emacs, rely on knowing about the width of a tab.
 # To prevent unexpected behavior in these applications, it's also required to
 # change the `it` value in terminfo when altering this setting.
-tabspaces: 8
+tabspaces: 4
 
 # When true, bold text is drawn using the bright variant of colors.
 draw_bold_text_with_bright_colors: true
@@ -296,6 +296,7 @@ live_config_reload: true
 #   `command` must be a map containing a `program` string, and `args` array of
 #     strings. For example:
 #     - { ... , command: { program: "alacritty", args: ["-e", "vttest"] } }
+
 key_bindings:
     - { key: N, mods: Command, action: SpawnNewInstance }
     - { key: V, mods: Command, action: Paste }
@@ -304,6 +305,7 @@ key_bindings:
     - { key: Copy, action: Copy }
     - { key: H, mods: Command, action: Hide }
     - { key: Q, mods: Command, action: Quit }
+    - { key: Q, mods: Control, chars: "\x11" }
     - { key: W, mods: Command, action: Quit }
     - { key: Home, chars: "\x1bOH", mode: AppCursor }
     - { key: Home, chars: "\x1b[H", mode: ~AppCursor }
