--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -81,7 +81,7 @@ font:
         # style: Italic
 
     # Point size of the font
-    size: 14.0
+    size: 13.0
 
     # Offset is the extra space around each character. offset.y can be thought of
     # as modifying the linespacing, and offset.x as modifying the letter spacing.
@@ -116,7 +116,8 @@ custom_cursor_colors: false
 colors:
     # Default colors
     primary:
-        background: "0x021627"
+        # background: "0x021627"
+        background: "0x1F1E1E"
         foreground: "0xCCC9C2"
 
         # (Optional) Bright and Dim foreground colors
