--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,20 @@
-# vim:fileencoding=utf-8:foldmethod=marker
+# kitty config
 
-#: Fonts \{\{{
+# switch tabs
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
+map cmd+] next_window
+map cmd+[ previous_window
+
+# clear screen
+map cmd+k combine : clear_terminal scrollback active : send_text normal,application \x0c
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
