moved to meson for lsp stuff (starting to get bloated again)

--- a/zshrc.conf
+++ b/zshrc.conf
@@ -3,10 +3,12 @@ source "${HOME}/.zgen/zgen.zsh"
 source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 bindkey ${FZF_MARKS_JUMP:-'^o'} fzm
 
-alias lg="lazygit"
+alias lg=lazygit
 alias gs="git status"
 alias unzip 'atool --extract --explain $1'
 alias wiki='nvim "+colorscheme darkplus" ~/wiki/index.md'
+alias e=nvim
+alias dd='dotter deploy'
 
 # note: never put nvim in quotes... will print ctrl characters
 #export EDITOR=nvim
