icons,kitty,lf,neovim

--- a/kitty.conf
+++ b/kitty.conf
@@ -610,13 +610,9 @@ detect_urls yes
 #: the operating systems sound API, such as WAV or OGA on Linux
 #: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound)
 
-#: }}}
-
-#: Window layout \{\{{
-
-# remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 400
+remember_window_size  yes
+initial_window_width  640
+initial_window_height 400
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -641,7 +637,7 @@ detect_urls yes
 #: (start_resizing_window). The cells value is used for horizontal
 #: resizing and the lines value for vertical resizing.
 
-#window_border_width 0.0pt
+window_border_width 0.0px
 
 #: The width of window borders. Can be either in pixels (px) or pts
 #: (pt). Values in pts will be rounded to the nearest number of pixels
@@ -649,7 +645,7 @@ detect_urls yes
 #: be pts. Note that borders are displayed only when more than one
 #: window is visible. They are meant to separate multiple windows.
 
-#draw_minimal_borders yes
+draw_minimal_borders yes
 
 #: Draw only the minimum borders needed. This means that only the
 #: minimum needed borders for inactive windows are drawn. That is only
@@ -673,7 +669,7 @@ detect_urls yes
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 10
+window_padding_width 22
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -797,7 +793,7 @@ confirm_os_window_close 0
 
 #: The margin to the left and right of the tab bar (in pts)
 
-tab_bar_margin_height 1.0 1.0
+tab_bar_margin_height 10.0 10.0
 
 #: The margin above and below the tab bar (in pts). The first number
 #: is the margin between the edge of the OS Window and the tab bar and
@@ -898,15 +894,15 @@ tab_title_template " {title} "
 #: tab_title_template.
 
 active_tab_foreground   #0FF
-active_tab_background   #000
+active_tab_background   #021627
 active_tab_font_style   bold
 inactive_tab_foreground #AAA
-inactive_tab_background #000
+inactive_tab_background #021627
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
 
-tab_bar_background #000
+tab_bar_background #021627
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -1308,7 +1304,7 @@ macos_traditional_fullscreen yes
 #: Use the traditional full-screen transition, that is faster, but
 #: less pretty.
 
-# macos_show_window_title_in all
+macos_show_window_title_in none
 
 #: Show or hide the window title in the macOS window or menu-bar. A
 #: value of window will show the title of the currently active window
@@ -1884,9 +1880,6 @@ map cmd+r set_tab_title
 
 #: The hints kitten has many more modes of operation that you can map
 #: to different shortcuts. For a full description see kittens/hints.
-#: }}}
-
-#: Miscellaneous \{\{{
 
 #: Toggle fullscreen
 
