--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -94,6 +94,16 @@ map <c-r> push :rename<space>
 # make sure trash folder exists
 # %mkdir -p ~/.trash
 
+cmd mkdir %{{
+	IFS=" "
+	mkdir -p -- "$*"
+	lf -remote "send $id select \"$*\""
+}}
+
+cmd touch %{{
+	touch -- "$*"
+}}
+
 # move current file or selected files to trash folder
 # (also see 'man mv' for backup/overwrite options)
 cmd trash %set -f; mv $fx ~/.trash
