--- a/zshrc.conf
+++ b/zshrc.conf
@@ -1,12 +1,11 @@
 source "${HOME}/.zgen/zgen.zsh"
-#autoload -Uz compinit && compinit
 source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 bindkey ${FZF_MARKS_JUMP:-'^o'} fzm
 
 alias lg=lazygit
 alias gs="git status"
 alias unzip 'atool --extract --explain $1'
-alias wiki='nvim "+colorscheme darkplus" ~/wiki/index.md'
+alias wiki='cd ~/wiki && nvim "+colorscheme darkplus" +TZNarrow ~/wiki/index.md'
 alias e=nvim
 alias dd='dotter deploy'
 
