--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -50,6 +50,8 @@ files = { "helix" = "~/.config/helix" }
 [lf.files]
 "lf/lfrc.conf" = { target = "~/.config/lf/lfrc", type = "symbolic" }
 "lf/pv.sh" = "~/.config/lf/pv.sh"
+"lf/icons" = "~/.config/lf/icons"
+"lf/colors" = "~/.config/lf/colors"
 
 [zsh]
 files = { "zshrc.conf" = "~/.zshrc" }
