--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -1,6 +1,8 @@
 # interpreter for shell commands
 set shell sh
 
+set icons
+
 # set '-eu' options for shell commands
 # These options are used to have safer shell commands. Option '-e' is used to
 # exit on error and option '-u' is used to give error for unset variables.
@@ -25,6 +27,7 @@ map <enter> shell
 
 # show hidden
 map . set hidden!
+map H set hidden!
 
 # fzf
 # map f $vi $(fzf)
