--- a/skhd.conf
+++ b/skhd.conf
@@ -1,5 +1,6 @@
 # term
-cmd - return : /Applications/Alacritty.app/Contents/MacOS/alacritty
+#cmd - return : /Applications/Alacritty.app/Contents/MacOS/alacritty
+#cmd - shift - return : /Applications/Kitty.app/Contents/MacOS/kitty
 
 # focus window
 # alt - h : chunkc tiling::window --focus west
