--- a/kitty.conf
+++ b/kitty.conf
@@ -669,7 +669,7 @@ draw_minimal_borders yes
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 22
+window_padding_width 18 22
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
