--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -3,6 +3,8 @@ set shell sh
 
 set icons
 
+#export EDITOR=nvim
+
 # set '-eu' options for shell commands
 # These options are used to have safer shell commands. Option '-e' is used to
 # exit on error and option '-u' is used to give error for unset variables.
