--- a/zshrc.conf
+++ b/zshrc.conf
@@ -10,7 +10,7 @@ alias e=nvim
 alias dd='dotter deploy'
 
 # note: never put nvim in quotes... will print ctrl characters
-#export EDITOR=nvim
+export EDITOR=nvim
 export TERM="xterm-256color"
 
 # foundry
