--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -62,6 +62,25 @@ map a push :aj<space>
 
 # cmd paste $cp-p --lf-paste $id
 
+# use rsync for copying (with progress)
+cmd paste &{{
+    set -- $(cat ~/.local/share/lf/files)
+    mode="$1"
+    shift
+    case "$mode" in
+        copy)
+            rsync -av --ignore-existing --progress -- "$@" . |
+            stdbuf -i0 -o0 -e0 tr '\r' '\n' |
+            while IFS= read -r line; do
+                lf -remote "send $id echo $line"
+            done
+            ;;
+        move) mv -n -- "$@" .;;
+    esac
+    rm ~/.local/share/lf/files
+    lf -remote "send clear"
+}}
+
 # execute current file (must be executable)
 map x $$f
 map X !$f
@@ -105,8 +124,9 @@ cmd mkdir %{{
 	lf -remote "send $id select \"$*\""
 }}
 
-cmd touch %{{
+cmd mk %{{
 	touch -- "$*"
+	lf -remote "send $id select \"$*\""
 }}
 
 # move current file or selected files to trash folder
