replaced tabline plugin with custom

--- a/kitty.conf
+++ b/kitty.conf
@@ -14,7 +14,7 @@ map cmd+] next_window
 map cmd+[ previous_window
 
 # clear screen
-map cmd+k combine : clear_terminal scrollback active : send_text normal,application \x0c
+# map cmd+k combine : clear_terminal scrollback active : send_text normal,application \x0c
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
@@ -894,15 +894,15 @@ tab_title_template " {title} "
 #: tab_title_template.
 
 active_tab_foreground   #0FF
-active_tab_background   #021627
+active_tab_background   #111
 active_tab_font_style   bold
 inactive_tab_foreground #AAA
-inactive_tab_background #021627
+inactive_tab_background #111
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
 
-tab_bar_background #021627
+tab_bar_background #111
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -917,7 +917,7 @@ tab_bar_background #021627
 #: Color scheme \{\{{
 
 # foreground #dddddd
-background #021627
+background #111
 
 #: The foreground and background colors
 
