--- a/zshrc.conf
+++ b/zshrc.conf
@@ -5,12 +5,12 @@ bindkey ${FZF_MARKS_JUMP:-'^o'} fzm
 alias lg=lazygit
 alias gs="git status"
 alias unzip 'atool --extract --explain $1'
-alias wiki='cd ~/wiki && nvim "+colorscheme darkplus" +TZNarrow ~/wiki/index.md'
+alias wiki='cd ~/wiki && nvim "+colorscheme gruvbox" +TZNarrow ~/wiki/index.md'
 alias e=nvim
 alias dd='dotter deploy'
 
 # note: never put nvim in quotes... will print ctrl characters
-export EDITOR=nvim
+# export EDITOR=nvim
 export TERM="xterm-256color"
 
 # foundry
