--- a/zshrc.conf
+++ b/zshrc.conf
@@ -6,6 +6,7 @@ alias lg=lazygit
 alias gs="git status"
 alias unzip 'atool --extract --explain $1'
 alias wiki='cd ~/wiki && nvim "+colorscheme gruvbox" +TZNarrow ~/wiki/index.md'
+alias w='cd ~/wiki && nvim "+colorscheme gruvbox" +TZNarrow ~/wiki/index.md'
 alias e=nvim
 alias dd='dotter deploy'
 
