--- a/zshrc.conf
+++ b/zshrc.conf
@@ -5,8 +5,8 @@ bindkey ${FZF_MARKS_JUMP:-'^o'} fzm
 alias lg=lazygit
 alias gs="git status"
 alias unzip 'atool --extract --explain $1'
-alias wiki='cd ~/wiki && nvim "+colorscheme gruvbox" +TZNarrow ~/wiki/index.md'
-alias w='cd ~/wiki && nvim "+colorscheme gruvbox" +TZNarrow ~/wiki/index.md'
+alias wiki='cd ~/wiki && nvim "+colorscheme gruvbox" +Goyo ~/wiki/index.md'
+alias w='cd ~/wiki && nvim "+colorscheme gruvbox" +Goyo ~/wiki/index.md'
 alias e=nvim
 alias dd='dotter deploy'
 
@@ -16,6 +16,9 @@ export TERM="xterm-256color"
 
 # foundry
 export PATH="$PATH:/Users/nom/.foundry/bin"
+
+# colors
+export LS_COLORS="$(vivid generate molokai)"
 
 # bun
 export BUN_INSTALL="/Users/nom/.bun"
