fixed bug with floaterm

--- a/zshrc.conf
+++ b/zshrc.conf
@@ -1,6 +1,8 @@
 source "${HOME}/.zgen/zgen.zsh"
 source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
+
 bindkey ${FZF_MARKS_JUMP:-'^o'} fzm
+bindkey -s '^l' 'lfcd\n'
 
 alias lg=lazygit
 alias gs="git status"
@@ -9,6 +11,7 @@ alias wiki='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 alias w='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 alias e=nvim
 alias dd='dotter deploy'
+alias l=lfcd
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
@@ -24,3 +27,17 @@ export LS_COLORS="$(vivid generate molokai)"
 export BUN_INSTALL="/Users/nom/.bun"
 export PATH="$BUN_INSTALL/bin:$PATH"
 [ -s "/Users/nom/.bun/_bun" ] && source "/Users/nom/.bun/_bun"
+
+lfcd () {
+    tmp="$(mktemp)"
+    lf -last-dir-path="$tmp" "$@"
+    if [ -f "$tmp" ]; then
+        dir="$(cat "$tmp")"
+        rm -f "$tmp"
+        if [ -d "$dir" ]; then
+            if [ "$dir" != "$(pwd)" ]; then
+                cd "$dir"
+            fi
+        fi
+    fi
+}
