--- a/zshrc.conf
+++ b/zshrc.conf
@@ -2,14 +2,18 @@ source "${HOME}/.zgen/zgen.zsh"
 source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 
 bindkey ${FZF_MARKS_JUMP:-'^o'} fzm
-bindkey -s '^l' 'lfcd\n'
+# bindkey -s '^l' 'lfcd\n'
 
 alias lg=lazygit
 alias gs="git status"
+alias gl="git log"
+alias gp="git push"
 alias unzip 'atool --extract --explain $1'
 alias wiki='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 alias w='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 alias e=nvim
+alias vim=nvim
+alias vi=nvim
 alias dd='dotter deploy'
 alias l=lfcd
 
@@ -17,16 +21,25 @@ alias l=lfcd
 # export EDITOR=nvim
 export TERM="xterm-256color"
 
+export PROMPT='%T %F{cyan}%~%b%f $ '
+
 # foundry
 export PATH="$PATH:/Users/nom/.foundry/bin"
 
 # colors
-export LS_COLORS="$(vivid generate molokai)"
+# export LS_COLORS="$(vivid generate molokai)"
 
 # bun
 export BUN_INSTALL="/Users/nom/.bun"
 export PATH="$BUN_INSTALL/bin:$PATH"
 [ -s "/Users/nom/.bun/_bun" ] && source "/Users/nom/.bun/_bun"
+
+# microcommit
+mc () {
+	git add . &&
+	git commit -a -m "$@" &&
+	git push
+}
 
 lfcd () {
     tmp="$(mktemp)"
