custom term popup

--- a/zshrc.conf
+++ b/zshrc.conf
@@ -3,6 +3,7 @@ source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 
 bindkey ${FZF_MARKS_JUMP:-'^o'} fzm
 # bindkey -s '^l' 'lfcd\n'
+bindkey -s '^ ' 'lfcd\n'
 
 alias lg=lazygit
 alias gs="git status"
