fix:neovim popups

--- a/zshrc.conf
+++ b/zshrc.conf
@@ -9,6 +9,7 @@ alias lg=lazygit
 alias gs="git status"
 alias gl="git log"
 alias gp="git push"
+alias gd="git diff"
 alias unzip 'atool --extract --explain $1'
 alias wiki='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 alias w='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
