--- a/kitty.conf
+++ b/kitty.conf
@@ -2016,3 +2016,6 @@ map  ctrl+enter      send_text normal,application \x1b[13;5u
 map  shift+enter     send_text normal,application \x1b[13;2u
 map  ctrl+tab        send_text normal,application \x1b[9;5u
 map  ctrl+shift+tab  send_text normal,application \x1b[9;6u
+
+# cmd+s to ctrl+s
+map cmd+s send_text all \x13
