--- a/zshrc.conf
+++ b/zshrc.conf
@@ -18,6 +18,7 @@ alias vim=nvim
 alias vi=nvim
 alias dd='dotter deploy'
 alias l=lfcd
+alias p="ping cloudflare.com"
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
