--- a/sway.conf
+++ b/sway.conf
@@ -137,10 +137,12 @@ set $config_path $HOME/.config/sway/
 set $term_float footclient --app-id=floating_shell --window-size-chars=128x36
 set $term_float_portrait footclient -a floating_shell_portrait
 
+# shortcuts
+#
 bindsym $mod+Return exec foot
-#bindsym $mod+Shift+Return exec kitty
 bindsym $mod+Shift+Return exec foot --app-id=floating_shell --window-size-chars=128x36
-bindsym $mod+Shift+F exec foot --app-id=floating_shell --window-size-chars=128x36 lf
+#bindsym $mod+Shift+o exec foot --app-id=floating_shell --window-size-chars=128x36 fzm
+bindsym $mod+o exec foot --app-id=floating_shell --window-size-chars=128x36 lf
 bindsym $mod+q kill
 #bindsym $mod+Space exec $menu
 bindsym $mod+Space exec fuzzel --background-color=111111EE --text=FFFFFFFF --border-color=00000000 --no-icons --selection-color=C8FC0CFF --selection-text=000000FF --match-color=00FF00FF --inner-pad=15 --vertical-pad=20 --letter-spacing=0.5 --line-height=20 --terminal=\"foot --app-id=floating_shell\"
@@ -148,7 +150,7 @@ bindsym $mod+Space exec fuzzel --background-color=111111EE --text=FFFFFFFF --bor
 bindsym $mod+b exec firefox
 bindsym $mod+Shift+b exec brave
 
-bindsym $mod+o exec killall -SIGUSR1 waybar
+#bindsym $mod+o exec killall -SIGUSR1 waybar
 #bindsym $mod+Shift+Return exec $term_float ranger ~
 
 bindsym $mod+s sticky toggle
